--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,8 +8,20 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
+  build-plugin:
+    name: "Build Plugin"
+    runs-on: ubuntu-latest
+    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Build Plugin
+        uses: redstrate/build-dalamud-plugin@main
+        with:
+          solution-dir: dalamud
+
   build-webassembly:
-    name: "Build (WebAssembly)"
+    name: "Build"
     runs-on: ubuntu-latest
     if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name
 
